# POO2_Riviere

./: CMakeLists.txt  main.cpp
riviere/: bank.cpp  bank.hpp  boat.cpp  boat.hpp  container.cpp  container.hpp  controller.cpp  controller.hpp  person.cpp  person.hpp
